k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkly
  labels:
    name: linkly
    environment: production
