k8s/12-frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkshortener-frontend
  namespace: linkshortener
  labels:
    app: linkshortener-frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: linkshortener-frontend
